--- a/deno.json
+++ b/deno.json
@@ -22,6 +22,8 @@
   ],
   "imports": {
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
+    "chartjs-adapter-date-fns": "npm:chartjs-adapter-date-fns@^3.0.0",
+    "date-fns": "npm:date-fns@^4.1.0",
     "preact": "https://esm.sh/preact@10.22.0",
     "preact/": "https://esm.sh/preact@10.22.0/",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
