--- a/deno.json
+++ b/deno.json
@@ -22,8 +22,11 @@
   ],
   "imports": {
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
-    "chartjs-adapter-date-fns": "npm:chartjs-adapter-date-fns@^3.0.0",
-    "date-fns": "npm:date-fns@^4.1.0",
+    "chart.js": "npm:chart.js@^4.4.1",
+    "chartjs-adapter-luxon": "npm:chartjs-adapter-luxon@^1.3.1",
+    "chartjs-plugin-datalabels": "npm:chartjs-plugin-datalabels@^2.2.0",
+    "chartjs-plugin-zoom": "npm:chartjs-plugin-zoom@^2.2.0",
+    "luxon": "npm:luxon@^3.7.1",
     "preact": "https://esm.sh/preact@10.22.0",
     "preact/": "https://esm.sh/preact@10.22.0/",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
