--- a/deno.json
+++ b/deno.json
@@ -22,9 +22,11 @@
   ],
   "imports": {
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
+    "@types/luxon": "npm:@types/luxon@^3.6.2",
     "chart.js": "npm:chart.js@^4.4.1",
     "chartjs-adapter-luxon": "npm:chartjs-adapter-luxon@^1.3.1",
     "chartjs-plugin-datalabels": "npm:chartjs-plugin-datalabels@^2.2.0",
+    "chartjs-plugin-streaming": "npm:chartjs-plugin-streaming@^2.0.0",
     "chartjs-plugin-zoom": "npm:chartjs-plugin-zoom@^2.2.0",
     "luxon": "npm:luxon@^3.7.1",
     "preact": "https://esm.sh/preact@10.22.0",
