--- a/deno.json
+++ b/deno.json
@@ -18,7 +18,8 @@
     }
   },
   "exclude": [
-    "**/_fresh/*"
+    "**/_fresh/*",
+    "./submodules/chartjs-plugin-streaming/docs/"
   ],
   "imports": {
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
@@ -26,7 +27,7 @@
     "chart.js": "npm:chart.js@^4.4.1",
     "chartjs-adapter-luxon": "npm:chartjs-adapter-luxon@^1.3.1",
     "chartjs-plugin-datalabels": "npm:chartjs-plugin-datalabels@^2.2.0",
-    "chartjs-plugin-streaming": "npm:chartjs-plugin-streaming@^2.0.0",
+    "chartjs-plugin-streaming": "file:./submodules/chartjs-plugin-streaming/src/index.js",
     "chartjs-plugin-zoom": "npm:chartjs-plugin-zoom@^2.2.0",
     "luxon": "npm:luxon@^3.7.1",
     "preact": "https://esm.sh/preact@10.22.0",
